--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Artists</string>
     <string name="bio">Biography</string>
+    <string name="error">Error: couldn\'t load data</string>
 </resources>
