Исправлен креш при обработке ошибок при загрузке данных. Добавлено особое сообщение об ошибке при отсутствии загруженных данных.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Исполнители</string>
     <string name="bio">Биография</string>
     <string name="error">Ошибка при загрузке данных</string>
+    <string name="try_again">Повторить</string>
 </resources>
