--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Artists</string>
     <string name="bio">Biography</string>
     <string name="error">Error: couldn\'t load data</string>
+    <string name="try_again">Try again</string>
 </resources>
