--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="bio">Biography</string>
     <string name="error">Error: couldn\'t load data</string>
     <string name="try_again">Try again</string>
+    <string name="swipe_to_refresh">Swipe down\nto refresh data</string>
 </resources>
